# stGPT

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: atera_wta_breast.yaml.example  atera_wta_breast_slide.yaml.example  atera_wta_cervical_slide.yaml.example  smoke.yaml
docs/: conf.py  contour_region_foundation_model.md  foundation_model_requirements.md  index.md  requirements.txt  strategy.md
docs/_static/css/: custom.css
docs/tutorials/: atera_xeniumslide_data_foundation.ipynb
scripts/pdc/: train_atera.slurm
src/stgpt/: __init__.py  cli.py  config.py  data.py  evaluation.py  images.py  inference.py  losses.py  models.py  qc.py  spatho.py  tokenization.py  training.py
src/stgpt/evidence/: __init__.py
src/stgpt/foundation/: __init__.py  packaging.py
src/stgpt/runtime/: __init__.py
tests/: test_config.py  test_data.py  test_evaluation.py  test_images.py  test_model.py  test_optional_integrations.py  test_qc.py  test_runtime_namespaces.py  test_spatho.py  test_training_cli.py
