[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stgpt"
version = "0.1.0"
description = "Xenium-first image-gene GPT prototype for spatial transcriptomics."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Taobo Hu" }]
keywords = ["spatial-transcriptomics", "xenium", "histopathology", "foundation-models", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "anndata>=0.10",
    "numpy>=1.23",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pydantic>=2,<3",
    "typer>=0.12",
    "pillow>=10",
    "pyarrow>=14",
    "PyYAML>=6",
]

[project.optional-dependencies]
xenium = ["pyXenium>=0.4.1"]
spatho = ["spatho>=0.1.0"]
dev = [
    "pytest>=8,<9",
    "ruff>=0.8",
    "mypy>=1.10",
    "build>=1,<2",
    "twine>=5,<7",
]

[project.urls]
Homepage = "https://github.com/hutaobo/stGPT"
Repository = "https://github.com/hutaobo/stGPT"
Issues = "https://github.com/hutaobo/stGPT/issues"

[project.scripts]
stgpt = "stgpt.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
